--- a/kutirWebsite/src/app/navbar/navbar.component.html
+++ b/kutirWebsite/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
 <div>
     <p>hey</p>
-    <p-button label="Submit"></p-button>
+    <p-button routerLink="about" label="Submit"></p-button>
 </div>
