--- a/kutirWebsite/src/app/components/home-body/home-body.component.html
+++ b/kutirWebsite/src/app/components/home-body/home-body.component.html
@@ -1,1 +1,67 @@
-<p>home-body works!</p>
+<section class="pt-2">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 mx-auto my-auto text-center">
+                <h1>Shri Ramakrishna Kutir Bikaner</h1>
+                <p class="lead mt-4 mb-5">
+                    Trusted by <b>10,000+</b> customers, Union themes & apps help you create beautiful responsive 
+                    HTML sites, faster and easier.
+                </p>
+                <p><img class="img-fluid" src="assets/kutir.jpg" alt="Mockup" /></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="pb-7">
+    <div class="container">
+        <hr class="my-6"/>
+        <div class="row">
+            <div class="col-md-6 mx-auto text-center">
+                <h2 class="dot-circle font-weight-normal">Daily activities</h2>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-md-6 order-2 order-md-1 my-md-auto">
+                <h3>Google Design</h3>
+                <p class="text-muted lead">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id ante posuere, vestibulum mauris eget, efficitur felis. Vestibulum tincidunt sit amet odio at gravida. Cras mollis dapibus orci, in interdum odio scelerisque rhoncus.
+                </p>
+            </div>
+            <div class="col-md-6 order-1 order-md-2">
+                <img src="assets/google-design.jpeg" class="img-fluid d-block mx-auto" alt="Google Design"/>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <img src="assets/facebook-messenger.jpeg" class="img-fluid d-block mx-auto" alt="Facebook Messenger"/>
+            </div>
+            <div class="col-md-6 my-md-auto">
+                <h3>Facebook Messenger</h3>
+                <p class="text-muted lead">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id ante posuere, vestibulum mauris eget, efficitur felis. Vestibulum tincidunt sit amet odio at gravida. Cras mollis dapibus orci, in interdum odio scelerisque rhoncus.
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 order-2 order-md-1 my-md-auto">
+                <h3>Twitter Mobile</h3>
+                <p class="text-muted lead">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id ante posuere, vestibulum mauris eget, efficitur felis. Vestibulum tincidunt sit amet odio at gravida. Cras mollis dapibus orci, in interdum odio scelerisque rhoncus.
+                </p>
+            </div>
+            <div class="col-md-6 order-1 order-md-2">
+                <img src="assets/twitter-mobile.jpeg" class="img-fluid d-block mx-auto" alt="Twitter Mobile"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.5.0/feather.min.js"></script>
